feat: update README and requirements for xvfb dependency and Google Sheets keyword integration

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,24 @@
-attrs==25.4.0
-certifi==2026.1.4
-charset-normalizer==3.4.4
-h11==0.16.0
-idna==3.11
-outcome==1.3.0.post0
-packaging==26.0
-PySocks==1.7.1
-python-dotenv==1.2.1
-requests==2.32.5
-selenium==4.16.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-trio==0.32.0
-trio-websocket==0.12.2
-urllib3==2.6.3
-webdriver-manager==4.0.1
-wsproto==1.3.2
+backports.tarfile==1.2.0
+cuda-bindings==12.9.4
+easyocr==1.7.2
 elasticsearch==8.17.0
+fastapi==0.128.0
+google-api-python-client==2.188.0
+google-auth-oauthlib==1.2.4
+imagehash==4.3.2
+importlib-metadata==8.7.1
+jaraco-context==6.1.0
+jaraco-functools==4.4.0
+jaraco.text==4.0.0
+lxml==5.2.2
+pip-chill==1.0.3
+pipreqs==0.5.0
+pyjwt==2.11.0
+pysocks==1.7.1
+selenium==4.16.0
+tinycss2==1.4.0
+tomli==2.4.0
+torchaudio==2.10.0+cpu
+triton==3.6.0
+uvicorn==0.40.0
+webdriver-manager==4.0.2
